# flask-angular-mysql-demo

./: .gitignore  README.md  makefile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: check.yml
api/: __init__.py  exceptions.py
api/blueprints/records/: __init__.py  models.py  routes.py  schemas.py
api/blueprints/water_quality/: models.py  routes.py  schemas.py
api/tests/: test_records_routes.py  test_water_quality.py
api/water_quality/: routes.py
db/: docker-compose.yml
db/init/: 01_create_water_quality_database.sql  02_create_record_table.sql
ui/: README.md  angular.json  package-lock.json  package.json
ui/src/: index.html  styles.css
ui/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  error-handler.service.ts  http-error.interceptor.ts
ui/src/app/records/: record.model.ts  records-table.component.html  records-table.component.ts  records.service.ts
